# meta-rl

./: .gitignore  Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
docs/: baseline-capture-cycle-2-2026-04-11.md  baseline-capture-cycle-3-2026-04-11.md  baseline-capture-cycle-4-2026-04-11.md  baseline-capture-cycle-5-2026-04-11.md  baseline-capture-cycle-6-2026-04-12.md  baseline-capture-exp-judging-improvements-2026-04-11.md  experiment-01-anti-exploit-2026-04-11.md  experiment-02-targeted-stuffing-penalty-2026-04-11.md  experiment-cycle-2-01-verbosity-penalty-2026-04-11.md  experiment-cycle-3-01-verbosity-tightening-2026-04-11.md  experiment-cycle-3-02-stuffing-tightening-2026-04-11.md  experiment-cycle-4-01-feature-bundle-2026-04-11.md  experiment-cycle-5-01-shortcut-bundle-2026-04-11.md  experiment-cycle-6-01-large-bundle-2026-04-12.md  final-freeze-note-2026-04-11.md  final-freeze-note-2026-04-12.md  improvement-cycle-2-playbook-2026-04-11.md  improvement-cycle-3-playbook-2026-04-11.md  judging-improvement-plan-2026-04-11.md  no-regression-checklist.md  release-notes-2026-04-11.md  repo-hygiene.md
scripts/: judging_audit.py  probe_endpoints.py  submission_evidence.py  submission_pipeline.py  validate-submission.sh
server/: app.py
tests/: test_baseline_runner.py  test_environment_contract.py  test_http_app.py  test_http_app_dashboard_guard.py  test_inference_contract.py  test_inference_model_call.py  test_inference_policy.py  test_inference_runtime.py  test_judging_audit.py  test_submission_evidence.py  test_submission_pipeline.py  (+2 more)
(+17 files in other folders)
