[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-support-queue"
version = "0.1.0"
description = "OpenEnv customer support queue environment"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.104",
  "uvicorn>=0.24",
  "pydantic>=2.6",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = [".", "envs"]
testpaths = ["tests", "envs/support_queue_env/tests"]
